# swc

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPENDENTS.md  MAINTENANCE.md  README.md  cliff.toml  clippy.toml  cspell.json  deny.toml  package.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
bindings/: Cargo.toml  README.md
bindings/binding_core_node/: Cargo.toml  LICENSE  build.rs
bindings/binding_core_wasm/: Cargo.toml  package.json
bindings/binding_html_node/: Cargo.toml  build.rs
bindings/binding_minifier_node/: Cargo.toml  LICENSE  build.rs
bindings/binding_minifier_wasm/: Cargo.toml  package.json
bindings/binding_typescript_wasm/: Cargo.toml  README.md  package.json
bindings/node_macro_deps/: Cargo.toml
bindings/swc_cli/: Cargo.toml
crates/ast_node/: Cargo.toml
crates/better_scoped_tls/: Cargo.toml  README.md
crates/binding_macros/: Cargo.toml
crates/dbg-swc/: .gitignore  Cargo.toml
crates/from_variant/: Cargo.toml
crates/jsdoc/: Cargo.toml
crates/preset_env_base/: Cargo.toml
crates/string_enum/: Cargo.toml
crates/swc/: .gitignore  Cargo.toml  README.md
crates/swc_allocator/: Cargo.toml
crates/swc_atoms/: Cargo.toml
crates/swc_bundler/: Cargo.toml
crates/swc_cached/: Cargo.toml
crates/swc_cached/Source/: regex.rs
crates/swc_cli_impl/: Cargo.toml
crates/swc_common/: Cargo.toml
crates/swc_compiler_base/: Cargo.toml
crates/swc_config/: Cargo.toml
crates/swc_config_macro/: Cargo.toml
crates/swc_core/: Cargo.toml  README.md  build.rs
crates/swc_css/: Cargo.toml
crates/swc_css_ast/: Cargo.toml
crates/swc_css_codegen/: Cargo.toml
crates/swc_css_codegen_macros/: Cargo.toml
crates/swc_css_compat/: Cargo.toml
crates/swc_css_lints/: Cargo.toml
crates/swc_css_minifier/: Cargo.toml
crates/swc_css_modules/: Cargo.toml
crates/swc_css_parser/: Cargo.toml  README.md
crates/swc_css_prefixer/: Cargo.toml
crates/swc_css_utils/: Cargo.toml
crates/swc_css_visit/: Cargo.toml
crates/swc_ecma_ast/: Cargo.toml
crates/swc_ecma_codegen/: Cargo.toml
crates/swc_ecma_codegen_macros/: Cargo.toml
crates/swc_ecma_compat_bugfixes/: Cargo.toml
crates/swc_ecma_compat_common/: Cargo.toml
crates/swc_ecma_compat_es2015/: Cargo.toml
crates/swc_ecma_compat_es2016/: Cargo.toml
crates/swc_ecma_compat_es2017/: Cargo.toml
crates/swc_ecma_compat_es2018/: Cargo.toml
crates/swc_ecma_compat_es2019/: Cargo.toml
crates/swc_ecma_compat_es2020/: Cargo.toml
crates/swc_ecma_compat_es2021/: Cargo.toml
crates/swc_ecma_compat_es2022/: Cargo.toml
crates/swc_ecma_compat_es3/: Cargo.toml
crates/swc_ecma_ext_transforms/: Cargo.toml
crates/swc_ecma_lints/: Cargo.toml
crates/swc_ecma_loader/: Cargo.toml
crates/swc_ecma_minifier/: .gitignore  Cargo.toml  README.md  package.json
crates/swc_ecma_parser/: Cargo.toml  colors.js
crates/swc_ecma_preset_env/: Cargo.toml
crates/swc_ecma_quote/: Cargo.toml  README.md
crates/swc_ecma_quote_macros/: Cargo.toml
crates/swc_ecma_testing/: Cargo.toml
crates/swc_ecma_transforms/: Cargo.toml
crates/swc_ecma_transforms_base/: Cargo.toml
crates/swc_ecma_transforms_classes/: Cargo.toml
crates/swc_ecma_transforms_compat/: Cargo.toml
crates/swc_ecma_transforms_macros/: Cargo.toml
crates/swc_ecma_transforms_module/: Cargo.toml
crates/swc_ecma_transforms_optimization/: Cargo.toml
crates/swc_ecma_transforms_proposal/: Cargo.toml
crates/swc_ecma_transforms_react/: Cargo.toml
crates/swc_ecma_transforms_testing/: Cargo.toml
crates/swc_ecma_transforms_typescript/: Cargo.toml
crates/swc_ecma_usage_analyzer/: Cargo.toml
crates/swc_ecma_utils/: Cargo.toml
crates/swc_ecma_visit/: Cargo.toml
crates/swc_ecmascript/: Cargo.toml  README.md
crates/swc_eq_ignore_macros/: Cargo.toml
crates/swc_error_reporters/: Cargo.toml
crates/swc_estree_ast/: Cargo.toml  README.md
crates/swc_estree_compat/: Cargo.toml
crates/swc_fast_graph/: Cargo.toml
crates/swc_fast_ts_strip/: Cargo.toml
crates/swc_graph_analyzer/: Cargo.toml
crates/swc_html/: Cargo.toml
crates/swc_html_ast/: Cargo.toml
crates/swc_html_codegen/: Cargo.toml
scripts/: update_fallback_dependencies.js
xtask/: Cargo.toml
(+1029 files in other folders)
