[workspace]
members = [
	"xtask",
	"crates/swc_allocator",
	"crates/swc_core",
	"crates/swc_cli_impl",
	"crates/dbg-swc",
	"crates/jsdoc",
	"crates/binding_macros",
	"crates/swc_css",
	"crates/swc_css_lints",
	"crates/swc_css_prefixer",
	"crates/swc_ecmascript",
	"crates/swc_ecma_lints",
	"crates/swc_ecma_quote",
	"crates/swc_estree_compat",
	"crates/swc_html",
	"crates/swc_plugin",
	"crates/swc_plugin_macro",
	"crates/swc_plugin_runner",
	"crates/swc_plugin_testing",
	"crates/swc_plugin_proxy",
	"crates/swc_timer",
	"crates/swc_xml",
	"crates/swc_x_optimizer",
	"crates/swc_transform_common",
	"crates/swc_typescript",
	"crates/swc_fast_ts_strip",
	"tools/generate-code",
	"tools/swc-releaser",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/swc-project/swc.git"

[workspace.dependencies]
bytecheck = "0.8.0"
rkyv = "=0.7.45"
Inflector = "0.11.4"
ahash = "0.8.11"
allocator-api2 = "0.2.18"
ansi_term = "0.12.1"
anyhow = "1.0.91"
arbitrary = "1"
arrayvec = "0.7.6"
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
auto_impl = "1.2.0"
backtrace = "0.3.74"
base64 = "0.22.1"
bitflags = "2.6.0"
browserslist-rs = "0.16.0"
bumpalo = "3.16.0"
cargo_metadata = "0.18.1"
cfg-if = "1.0.0"
changesets = "0.3.0"
chrono = "0.4.38"
codspeed-criterion-compat = "2.7.2"
console_error_panic_hook = "0.1.7"
copyless = "0.1.5"
crc = "3.2.1"
criterion = "0.5.1"
crossbeam-queue = "0.3.11"
dashmap = "6.1.0"
dialoguer = "0.11.0"
difference = "2"
either = "1.13.0"
enumset = "1.1.5"
flate2 = "1.0"
futures = "0.3"
glob = "0.3.1"
hashbrown = "0.15.0"
hex = "0.4.3"
hstr = "0.2.12"
indexmap = "2.6.0"
is-macro = "0.3.6"
js-sys = "0.3.72"
jsonc-parser = "0.26.1"
lazy_static = "1.5.0"
lexical = "7.0.2"
lru = "0.12.5"
memchr = "2.7.4"
miette = "7.2.0"
napi = { version = "2.16.13", default-features = false }
napi-derive = { version = "2.16.12", default-features = false }
new_debug_unreachable = "1.0.6"
nom = "7.1.3"
ntest = "0.9.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num_cpus = "1.16.0"
once_cell = "1.20.2"
parking_lot = "0.12.3"
path-absolutize = "3.1.1"
pathdiff = "0.2.2"
petgraph = "0.6.5"
phf = "0.11.2"
pretty_assertions = "1.4"
proc-macro2 = "1.0.89"
ptr_meta = "0.3.0"
quote = "1.0.37"
radix_fmt = "1.0.0"
rayon = "1.10.0"
regex = "1.11.0"
relative-path = "1.9.3"
reqwest = "0.12.8"
rustc-hash = "2.0.0"
ryu-js = "1.0.1"
scoped-tls = "1.0.1"
semver = "1.0.23"
serde = "1.0.213"
serde-wasm-bindgen = "0.6.5"
serde_derive = "1.0.213"
serde_json = "1.0.132"
sha1 = "0.10.6"
sha2 = "0.10.8"
siphasher = "1.0.1"
smallvec = "1.13.2"
smartstring = "1"
sourcemap = "9.0.0"
st-map = "0.2.4"
syn = "2"
tempfile = "3.13.0"
termcolor = "1.4"
thiserror = "1.0.65"
tokio = { version = "1", default-features = false }
toml = "0.8.19"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
triomphe = "0.1.14"
typed-arena = "2.0.2"
unicode-id = "0.3"
unicode-id-start = "1.3.1"
unicode-width = "0.2.0"
url = "2.5.2"
vergen = { version = "9.0.1", default-features = false }
virtual-fs = { version = "0.18.0", default-features = false }
walkdir = "2.5.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasmer = { version = "4.4.0", default-features = false }
wasmer-wasix = { version = "0.29.0", default-features = false }

[profile.release]
lto = true

# We use CARGO_PROFILE_RELEASE_LTO for production builds
# lto = "fat"

# debug = true
# opt-level = 'z'

[profile.bench]
debug = true
lto = true

# Optimize for iteration
[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
