[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Cached types for swc"
documentation = "https://rustdoc.swc.rs/swc_cached/"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license-file = "LICENSE"
name = "swc_cached"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"

[lib]
bench = false
path = "Source/lib.rs"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
